aligned badges, fixed footer

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -13,6 +13,14 @@
   right: 0;
   background-color: rgb(25, 18, 31);
   margin-left: 20px;
-
-  
 } 
+
+
+/* unvisited link */
+a:link, 
+a:visited,
+a:hover,
+a:active  {
+  text-decoration: none;
+}
+
